--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,36 @@
   margin: 0;
   padding: 0;
 }
+
+/*            LIST SECTION                     */
+#list-group{
+  width: 60%;
+}
+
+li.todo {
+  padding: 5px 0;
+}
+
+li.todo  button{
+  width: 50px;
+  height: 30px;
+  border-radius: 10px;
+  background-color: #e2e0e0;
+  font-size: 10px;
+}
+
+li.todo  button:hover{
+  background-color: #ababab;
+}
+
+button.btn-toggle{
+  margin:0 10px;
+  color: green;
+}
+
+button.btn-delete{
+  color: red;
+}
+
+
+/*            LIST SECTION                     */
