--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   width: 60%;
 }
 
+.list-container{
+  border: 2px solid #64748b;
+}
+
 li.todo {
   padding: 5px 0;
 }
@@ -32,6 +36,10 @@ li.todo  button:hover{
 button.btn-toggle{
   margin:0 10px;
   color: green;
+}
+
+.btn-group{
+  border-left: 1px solid #64748b;
 }
 
 button.btn-delete{
